--- a/Coupon.html
+++ b/Coupon.html
@@ -15,11 +15,11 @@
     </style>
 </head>
 <body>
-   <table bgcolor="#F2F2F2" width="100%" cellpadding="0" cellspacing="0" border="0">
+   <table bgcolor="#F2F2F2" width="100%" cellpadding="0" cellspacing="0" border="0" style="padding-top: 5px;padding-bottom: 5px;">
         <tbody>
             <tr>
                 <td width="100%">
-                    <table width="680" bgcolor="#FFFFFF" cellpadding="0" cellspacing="0" border="0" align="center">
+                    <table width="680" bgcolor="#FFFFFF" cellpadding="0" cellspacing="0" border="0" align="center" style="padding-top: 48px;padding-bottom: 24px;">
                         <tbody>
                             <tr>
                                 <td>
@@ -27,14 +27,14 @@
                                     <table width="560" cellpadding="0" cellspacing="0" border="0" align="center">
                                         <tbody>
                                             <tr>
-                                                <td align="center" style="padding-top: 48px;padding-bottom: 24px;">
+                                                <td align="center" style="padding-bottom: 24px;">
                                                     <img src="./img/logo.png" alt="logo" width="100%" style="max-width: 143px;">
                                                 </td>
                                             </tr>
                                         </tbody>
                                     </table>
                                     <!--TITLE-->
-                                    <table width="560" cellpadding="0" cellspacing="0" border="0" align="center">
+                                    <table width="560" cellpadding="0" cellspacing="0" border="0" align="center" style="padding-bottom: 16px;">
                                         <tbody>
                                             <tr>
                                                 <td align="center" style="font-family: Arial, Helvetica, sans-serif;font-size: 21px;font-weight: 400;line-height: 28px;color:#4A5566;">
@@ -42,6 +42,80 @@
                                                 </td>
                                             </tr>
                                         </tbody>
+                                    </table>
+                                    <!--COUPON-->
+                                    <table width="560" cellpadding="0" cellspacing="0" border="0" align="center" bgcolor="#F8F8FA" style="padding-top: 24px;padding-bottom: 24px;">
+                                        <tbody>
+                                            <tr>
+                                                <td>
+                                                    <table width="512" cellpadding="0" cellspacing="0" border="0" align="center">
+                                                        <tbody>
+                                                            <tr>
+                                                                <td>
+                                                                    <!--COUPON-LEFT-->
+                                                                    <table width="184" cellpadding="0" cellspacing="0" border="0" align="left" style="border-right-width: 1px;border-right-style: dashed;border-right-color: #8492A6;text-align: center;padding-right: 24px;">
+                                                                        <tbody>
+                                                                            <tr>
+                                                                                <td style="font-family: Arial, Helvetica, sans-serif;font-size: 16px;font-weight: 400;line-height: 22px;color:#8492A6;padding-bottom: 4px;">Coupon:</td>
+                                                                            </tr>
+                                                                            <tr>
+                                                                                <td style="font-family: Arial, Helvetica, sans-serif;font-size: 50px;font-weight: 400;color:#4A5566;padding-bottom: 11px;">50%<sup style="font-size: 21px;line-height: 28px;">off</sup></td>
+                                                                            </tr>
+                                                                            <td>
+                                                                                <a href="#" style="font-family: Arial, Helvetica, sans-serif;font-size: 12px;font-weight: bold;background: #0052E2;border-radius: 4px;color:#ffffff;text-decoration: none;line-height: 32px;height: 32px;display: inline-block;width: 100%">Redeem coupon</a>
+                                                                            </td>
+                                                                        </tbody>
+                                                                    </table>
+                                                                    <!--COUPON-CENTER-->
+                                                                    <table cellpadding="0" cellspacing="0" border="0" align="left" style="text-align: center;">
+                                                                        <tbody>
+                                                                            <tr>
+                                                                                <td width="100%" height="15" style="font-size: 1px;line-height: 1px; mso-line-height-rule: exactly;">
+                                                                                    &nbsp;
+                                                                                </td>
+                                                                            </tr>
+                                                                        </tbody>
+                                                                    </table>
+                                                                    <!--COUPON-RIGHT-->
+                                                                    <table width="327" height="128" cellpadding="0" cellspacing="0" border="0" align="left" style="text-align: center;padding-left: 24px;">
+                                                                        <tbody>
+                                                                            <tr>
+                                                                                <td align="left" style="font-family: Arial, Helvetica, sans-serif;font-size: 21px;font-weight: 400;line-height: 28px;color:#8492A6;">
+                                                                                    Enter the code <span style="color: #0052E2;">blkfridy-2019v3</span> when you spend $120 to enjoy the discount on your next purchase.
+                                                                                </td>
+                                                                            </tr>
+                                                                        </tbody>
+                                                                    </table>
+                                                                </td>
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <!--TEXT-->
+                                    <table  width="560" cellpadding="0" cellspacing="0" border="0" align="center" style="padding-top: 16px;padding-bottom: 64px;">
+                                        <tbody>
+                                            <tr>
+                                                <td align="left" style="font-family: Arial, Helvetica, sans-serif;font-size: 12px;font-weight: 400;line-height: 16px;color:#8492A6;">* To use before December 30, 2020</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <!--FOOTER-->
+                                    <table  width="560" cellpadding="0" cellspacing="0" border="0" align="center" style="border-top-width: 1px;border-top-color: #EDEDF2;border-top-style: solid;padding-top: 16px;">
+                                        <tfoot>
+                                            <tr>
+                                                <td align="left" style="font-family: Arial, Helvetica, sans-serif;font-size: 12px;font-weight: 400;line-height: 16px;color:#8492A6;padding-bottom: 16px;">
+                                                    This email was sent to you as a registered member of <a href="#" style="color:#0052E2;text-decoration: none;">craftingemails.com</a>. To update your emails preferences <a href="#" style="color:#0052E2;text-decoration: none;">click here</a>. Use of the service and website is subject to our <a href="#" style="color:#0052E2;text-decoration: none;">Terms of Use</a> and <a href="#" style="color:#0052E2;text-decoration: none;">Privacy Statement</a>.
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td align="left" style="font-family: Arial, Helvetica, sans-serif;font-size: 12px;font-weight: 400;line-height: 16px;color:#8492A6;">
+                                                    © 2019 Craftingemails. All rights reserved
+                                                </td>
+                                            </tr>
+                                        </tfoot>
                                     </table>
                                 </td>
                             </tr>
